fix(NUM-1392): Fixes word-wrapping in tables with long names

--- a/src/app/modules/studies/components/add-phenotypes-filter-table/add-phenotypes-filter-table.component.scss
+++ b/src/app/modules/studies/components/add-phenotypes-filter-table/add-phenotypes-filter-table.component.scss
@@ -8,6 +8,10 @@ table {
   width: 100%;
 }
 
-td:focus {
-  outline: none;
+td {
+  word-break: break-word;
+
+  &:focus {
+    outline: none;
+  }
 }
